--- a/staff/groups/le-sky-martini-inc/memefy/components/random.sass
+++ b/staff/groups/le-sky-martini-inc/memefy/components/random.sass
@@ -1,6 +1,9 @@
-.detail
-    margin: 2em auto auto auto
-    padding: 5em
+.random
+    &__tv-icon
+        max-width: 20%
+
+    &__tv-remote
+        max-width: 20%
 
     &__title
         font-size: 33px
@@ -8,14 +11,6 @@
     &__photo
         max-width: 80%
         margin: auto
-
-    &__link
-        color: black
-        font-weight: bold
-        text-decoration: none 
-
-    &__link:hover
-        color: gray
 
     &__back
         @extend %link
