--- a/staff/groups/le-sky-martini-inc/memefy/components/results.sass
+++ b/staff/groups/le-sky-martini-inc/memefy/components/results.sass
@@ -1,8 +1,5 @@
 .results
-    @extend %main-content-box 
-    
-    margin-bottom: 2em
-    background-color: rgba(0, 0, 0, 0.1)
+    margin: 2em auto auto auto
 
     &__list
         display: grid
