--- a/staff/groups/le-sky-martini-inc/memefy/components/search.sass
+++ b/staff/groups/le-sky-martini-inc/memefy/components/search.sass
@@ -1,14 +1,12 @@
 .search
-    @extend %main-content-box
-
     margin: 2em auto 2em auto
-    background-color: $terciary-bg-color
 
     &__label
         display: none
 
     &__input
         @extend %text-input
+        text-align: center
 
     &__button
         @extend %button
