--- a/staff/groups/le-sky-martini-inc/memefy/style/index.sass
+++ b/staff/groups/le-sky-martini-inc/memefy/style/index.sass
@@ -1,5 +1,7 @@
 * 
     margin: 0
+    padding: 0
+    box-sizing: border-box
     
 @import base-settings
 @import ../components/landing
@@ -7,6 +9,7 @@
 @import ../components/register
 @import ../components/register-success
 @import ../components/register-or-login
+@import ../components/random
 @import ../components/feedback
 @import ../components/search
 @import ../components/results
