--- a/staff/groups/le-sky-martini-inc/memefy/style/base-settings.sass
+++ b/staff/groups/le-sky-martini-inc/memefy/style/base-settings.sass
@@ -1,8 +1,8 @@
 $primary-bg-color: rgba(0, 0, 0, 0.5)
-$secondary-bg-color: rgba(255, 255, 255, 0.5)
+$secondary-bg-color: rgba(255, 255, 255, 0.3)
 $terciary-bg-color: rgba(0, 0, 0, 0.1)
 
-$button-bg-color: black
+$button-bg-color: #45b39c
 $error-bg-color: rgba(100, 0, 0, .65)
 
 $primary-text-color: black
@@ -13,10 +13,11 @@ $hover-text-color: deeppink
 
     
 %main-content-box 
-    background-color: $secondary-bg-color
-    margin: auto
+    background-color:$primary-bg-color
+    margin: 5em auto auto auto
     padding: 30px
-    width: 70%
+    width: 90%
+    height: 95%
     text-align: center
 
 %link
@@ -43,20 +44,35 @@ $hover-text-color: deeppink
 @mixin header-footer-style
     background-color: $primary-bg-color
     color: $secondary-text-color
-    padding: 1.5em
+    padding: 2em
     text-align: center
 
 .body
-    background-image: url("https://images.pexels.com/photos/988872/pexels-photo-988872.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260")
-    background-repeat: no-repeat
-    background-size: cover
-    box-sizing: border-box
-    margin: auto
+    background: linear-gradient(-45deg, #1CFF1B,#FF5128, #9422E8, #1EC0FF)
+    background-size: 400% 400%
+    animation: Gradient 15s ease infinite
+    padding: 0
     font-family: "Cousine", sans-serif
     font-size: 1.2rem
+    @keyframes Gradient
+        0%
+            background-position: 0% 50%
+        50% 
+            background-position: 100% 50%
+        100% 
+            background-position: 0% 50%
     &__header
         @include header-footer-style
-        font-size: 3rem
+        font-family: Bungee
+        font-size: 2rem
+        padding: 1em 0 3em 0
+    
+    &__header-title1
+        text-decoration: none
+        color: $secondary-text-color
+
+    &__header-title2
+        font-size: 1.2rem
 
     &__main
         margin-top: 3em
@@ -66,5 +82,4 @@ $hover-text-color: deeppink
         @include header-footer-style
 
         width: 100%
-        font-size: 14px
-        margin-top: -50px
+        font-size: 1rem
