--- a/staff/groups/skynews-sa/0/style/index.sass
+++ b/staff/groups/skynews-sa/0/style/index.sass
@@ -17,7 +17,6 @@
   font-size: 1em
   color: rgb(85, 85, 85)
   background-image: url('https://image.freepik.com/vector-gratis/diseno-fondo-mapa-mundo_1127-2318.jpg')
-  background-size: cover
 
 .spinner:before
   content:""
@@ -52,7 +51,7 @@
   list-style-type: none
   display: flex
 
-a
+.nav-but
   font-size: 0.8em
   background-color: rgba(241, 239, 235, 0.2)
   text-decoration: none
@@ -60,21 +59,35 @@ a
 
 .register-li
   padding: 0.4rem 1.3rem
-
+  
 .login-li
   padding: 0.4rem 1.8rem
 
 .nav-logo
-  width: 84vw
-  margin: 6rem auto
+  width: 70vw
+  margin: 2rem auto
   display: flex
 
-select
+.select
   width: 60vw
   height: 6vh
-  margin: 0 auto
+  margin: 1rem auto
   display: flex
   background-color: rgb(255,255,255)
+
+.search-button
+  width: 40vw
+  height: 6vh
+  margin: 1rem auto
+  padding: 0 2.4rem
+  display: flex
+  background-color: rgba(200,200,200,0.5)
+  border: 0.05rem solid rgb(180,180,180)
+  border-radius: 0.3rem
+
+.search-button:active
+  background-color: rgba(200,200,200,1)
+  color: rgb(255,255,255)
 
 .results-nav
   width: 100vw
@@ -101,11 +114,11 @@ select
 
 .detail
   width: 95vw
-  margin: 1rem auto
+  margin: 1rem auto 2rem auto
   background: rgb(255,255,255)
 
 .detail-title
-  margin-top: 2rem
+  margin-top: 2.5rem
 
 .detail-img
   width: 95vw
@@ -116,5 +129,190 @@ select
 
 .detail-description
   font-size: 0.8rem
-  margin-top: 1rem
+  margin: 1rem 0
 
+.nav-hello
+  margin: auto 6rem auto 0  
+  color: rgb(255,255,255)
+  font-size: 0.9rem
+
+.fav-ul
+  list-style-type: none
+  display: flex
+
+.fav-logo
+  width: 60vw
+  margin: 4rem auto
+  display: flex
+
+.favorites-li
+  padding: 0.4rem 1.3rem
+  
+.logout-li
+  padding: 0.4rem 1.7rem
+
+.search-li
+  padding: 0.4rem 1.7rem
+
+.search
+  text-align: center 
+
+.search-title
+  margin: 1rem auto
+
+.register-main
+  width: 100vw
+
+.register-nav
+  width: 100%
+  padding: 0.2rem 
+  height: 2.2rem
+  background-color: #009ee2
+  display: flex
+  justify-content: space-between
+  align-items: center
+
+.register-form-section
+  width: 90vw
+  margin-top: 2rem
+  padding: 2rem
+  margin: 2rem auto
+  background-color: rgba(255, 255, 255, 0.5)
+  box-shadow: 10px 10px 9px -4px rgba(0, 0, 0, 0.1)
+  border-radius: 0.3rem
+  text-align: center
+  justify-content: center
+  flex-direction: column
+  align-items: center
+
+.register-form
+  margin-top: 2rem
+  
+input 
+  width: 100%
+  height: 1.5rem
+  margin: 0.2rem 0 1rem 0
+  border-radius: 0.3rem
+  border: 0.05rem solid #b4b4b4
+  padding: 2px
+
+.register-back
+  padding: 0.4rem 1.7rem
+
+.register-button
+  width: 40vw
+  height: 6vh
+  margin: 1rem auto
+  padding: 0 3.2rem
+  display: flex
+  background-color: rgba(200,200,200,0.5)
+  border: 0.05rem solid rgb(180,180,180)
+  border-radius: 0.3rem
+
+.fav-logo-bco
+  height: 80%
+  padding-left: 0.45rem
+
+.login-main
+  width: 100vw
+
+.login-nav
+  width: 100%
+  padding: 0.2rem 
+  height: 2.2rem
+  background-color: #009ee2
+  display: flex
+  justify-content: space-between
+  align-items: center
+
+.login-form-section
+  width: 90vw
+  margin-top: 2rem
+  padding: 2rem
+  margin: 2rem auto
+  background-color: rgba(255, 255, 255, 0.5)
+  box-shadow: 10px 10px 9px -4px rgba(0, 0, 0, 0.1)
+  border-radius: 0.3rem
+  text-align: center
+  justify-content: center
+  flex-direction: column
+  align-items: center
+
+.login-form
+  margin-top: 2rem
+
+.login-back
+  padding: 0.4rem 1.7rem
+
+.login-button
+  width: 40vw
+  height: 6vh
+  margin: 1rem auto
+  padding: 0 3.75rem
+  display: flex
+  background-color: rgba(200,200,200,0.5)
+  border: 0.05rem solid rgb(180,180,180)
+  border-radius: 0.3rem
+
+.feedback-button
+  width: 40vw
+  height: 6vh
+  margin: 1rem auto
+  padding: 0 4.2rem
+  display: flex
+  background-color: rgba(200,200,200,0.8)
+  border: 0.05rem solid rgb(180,180,180)
+  border-radius: 0.3rem
+
+.feedback-section
+  width: 60vw
+  margin: 1rem auto
+  padding: 0.8rem 0.8rem 0.8rem 
+  background-color: rgba(255, 0, 0, 0.5)
+  text-align: center
+  color: rgb(255,255,255)
+  font-size: 0.8rem
+  border-radius: 0.3rem
+
+.reg-success-nav
+  width: 100%
+  padding: 0.2rem 
+  height: 2.2rem
+  background-color: #009ee2
+  display: flex
+  justify-content: flex-start
+  align-items: center
+
+
+.reg-success-section
+  width: 90vw
+  margin-top: 2rem
+  padding: 2rem
+  margin: 2rem auto
+  background-color: rgba(255, 255, 255, 0.5)
+  box-shadow: 10px 10px 9px -4px rgba(0, 0, 0, 0.1)
+  border-radius: 0.3rem
+  text-align: center
+  justify-content: center
+  flex-direction: column
+  align-items: center
+
+.art-but
+  width: 40vw
+  margin: 1rem 1rem 1rem 0
+  justify-content: flex-end
+  background-color: rgba(200,200,200,0.5)
+  border: 0.05rem solid rgb(180,180,180)
+  border-radius: 0.3rem
+  text-decoration: none
+  font-size: 0.8rem
+  color: rgb(0,0,0)
+
+.detail-link
+  padding: 0.4rem 1.5rem
+
+.back-link
+  padding: 0.4rem 1.7rem
+
+.star
+  margin:0 1rem
