--- a/staff/groups/esputy-corp/esputyfu/components/header/index.sass
+++ b/staff/groups/esputy-corp/esputyfu/components/header/index.sass
@@ -6,10 +6,16 @@ h2
     font-family: "Playfair Display", serif
     display: flex
     justify-content: space-between
+    width: 100vw
+  
     &__a
         text-decoration: none
         color: white
          margin-top: 20px
+    &__logo
+        width: 20px
+        display: inline-block
+
 
 .header__a:hover
     color: skyblue
