--- a/staff/groups/over-cook-sa/overcooked/components/feedback/index.sass
+++ b/staff/groups/over-cook-sa/overcooked/components/feedback/index.sass
@@ -1,4 +1,7 @@
 .feedback
+    border: 1px solid black
+    border-radius: 15px
+    background-color: grey
     &--error
         color: red
     &--warn
