--- a/staff/groups/over-cook-sa/overcooked/style/index.css
+++ b/staff/groups/over-cook-sa/overcooked/style/index.css
@@ -1,3 +1,7 @@
+* {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
 .feedback--error {
   color: red;
 }
@@ -12,7 +16,6 @@
 
 body {
   display: flex;
-  margin: 5px;
 }
 
 ul {
@@ -38,55 +41,61 @@ main {
 
 .back-img {
   display: flex;
-  background-image: url("img/fondo.jpg");
+  background-color: white;
   background-size: cover;
   display: block;
   width: 100%;
   height: 100%;
 }
 
-.welcomeAnchors {
+.landingContainer {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
   padding-top: 1%;
 }
-
-.welcomeAnchors li {
-  margin: 3vw;
-  justify-content: flex-start;
+.landingContainer_container {
+  background-color: aliceblue;
+  border: 2px solid rgba(0, 0, 0, 0.3);
+  box-shadow: 0 4px 6px #bbb;
+  background: #fff;
+  border-radius: 3px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  padding: 1vw;
 }
 
-.welcomeAnchors a {
+.landingContainer li {
+  margin: 1vw;
+}
+
+.landingContainer a {
   text-decoration: none;
-  font-size: 1.2em;
+  font-size: 0.8em;
   color: black;
   font-weight: bolder;
-  background-color: aliceblue;
-  border: 2px solid black;
-  border-radius: 15px;
-  -moz-border-radius: 15px;
-  -webkit-border-radius: 15px;
-  padding: 0.5vw;
-  padding-left: 5vw;
-  padding-right: 5vw;
+}
+
+.landingContainer label {
+  margin: 1vw;
+}
+
+.landingContainer h2 {
+  margin: 1vw;
+}
+
+.back {
+  margin: 1vw;
 }
 
 .random-content {
   border: 2px solid rgba(0, 0, 0, 0.3);
   padding: 0 20px 20px 20px;
   margin: 60px;
-  background: #ff0084;
-  background: -moz-linear-gradient(left, #ff0084 0%, #ff0084 20%, rgba(255, 0, 132, 0.32) 100%);
-  background: -webkit-gradient(left top, right top, color-stop(0%, #ff0084), color-stop(20%, #ff0084), color-stop(100%, rgba(255, 0, 132, 0.32)));
-  background: -webkit-linear-gradient(left, #ff0084 0%, #ff0084 20%, rgba(255, 0, 132, 0.32) 100%);
-  background: -o-linear-gradient(left, #ff0084 0%, #ff0084 20%, rgba(255, 0, 132, 0.32) 100%);
-  background: -ms-linear-gradient(left, #ff0084 0%, #ff0084 20%, rgba(255, 0, 132, 0.32) 100%);
-  background: linear-gradient(to right, #ff0084 0%, #ff0084 20%, rgba(255, 0, 132, 0.32) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#ff0084", endColorstr="#ff0084", GradientType=1 );
-  border-radius: 45px 0px 45px 0px;
-  -moz-border-radius: 45px 0px 45px 0px;
-  -webkit-border-radius: 45px 0px 45px 0px;
+  box-shadow: 0 4px 6px #bbb;
+  background: #fff;
+  border-radius: 3px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  padding: 10px;
 }
 
 .random-recipe {
@@ -95,16 +104,16 @@ main {
   flex-direction: column;
   align-content: center;
 }
-.random-recipe .recipe-title {
-  border: 1px solid black;
-  border-radius: 15px;
-  -moz-border-radius: 15px;
-  -webkit-border-radius: 15px;
-}
 .random-recipe .recipe-video {
   border-radius: 30px;
-  -moz-border-radius: 30px;
-  -webkit-border-radius: 30px;
+}
+
+footer {
+  background-color: #a30f32;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: baseline;
+  color: white;
 }
 
 .feedback--error {
