--- a/staff/groups/over-cook-sa/overcooked/style/index.sass
+++ b/staff/groups/over-cook-sa/overcooked/style/index.sass
@@ -1,3 +1,6 @@
+*
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  
 .feedback--error 
   color: red
 
@@ -9,7 +12,7 @@
 
 body 
   display: flex
-  margin: 5px
+  
 
 ul 
   padding: 0
@@ -30,35 +33,76 @@ main
 
 .back-img 
   display: flex
-  background-image: url("img/fondo.jpg")
+  background-color: white
   background-size: cover
   display: block
   width: 100%
   height: 100%
 
-.welcomeAnchors 
+.landingContainer 
   display: flex
-  flex-wrap: wrap
-  justify-content: center
   padding-top: 1%
+  
+  &_container
+    background-color: aliceblue
+    border: 2px solid rgba(0,0,0,0.3)
+    box-shadow: 0 4px 6px #bbb
+    background: #fff
+    border-radius: 3px
+    -moz-border-radius: 3px
+    -webkit-border-radius: 3px
+    padding: 1vw
 
-.welcomeAnchors li 
-    margin: 3vw
-    justify-content: flex-start
+.landingContainer li 
+    margin: 1vw
 
-.welcomeAnchors a 
+.landingContainer a 
     text-decoration: none
-    font-size: 1.2em
+    font-size: 0.8em
     color: black
     font-weight: bolder
-    background-color: aliceblue
-    border: 2px solid black
-    border-radius: 15px
-    -moz-border-radius: 15px
-    -webkit-border-radius: 15px
-    padding: 0.5vw
-    padding-left: 5vw
-    padding-right: 5vw
+
+.landingContainer label
+  margin: 1vw
+
+.landingContainer h2
+  margin: 1vw
+
+.back
+  margin: 1vw
+  
+
+.random-content
+    border: 2px solid rgba(0,0,0,0.3)
+    padding: 0 20px 20px 20px
+    margin: 60px
+    box-shadow: 0 4px 6px #bbb
+    background: #fff
+    border-radius: 3px
+    -moz-border-radius: 3px
+    -webkit-border-radius: 3px
+    padding: 10px
     
-@import ../components/landing
+.random-recipe 
+    display: flex
+    flex-wrap: wrap
+    flex-direction: column
+    align-content: center
+  
+    .recipe-title
+     
+  
+    .recipe-video
+        border-radius: 30px
+
+
+footer
+    background-color: rgb(163, 15, 50)
+    display: flex
+    justify-content: space-evenly
+    align-items: baseline
+    color: white
+
+
+
 @import ../components/feedback
