add more height to header

--- a/staff/groups/esputy-corp/esputyfu/styles/index.css
+++ b/staff/groups/esputy-corp/esputyfu/styles/index.css
@@ -59,6 +59,7 @@ h2 {
   display: flex;
   justify-content: space-between;
   width: 100vw;
+  height: 8rem;
 }
 .header__a {
   text-decoration: none;
