--- a/staff/groups/esputy-corp/esputyfu/components/header/index.sass
+++ b/staff/groups/esputy-corp/esputyfu/components/header/index.sass
@@ -7,6 +7,7 @@ h2
     display: flex
     justify-content: space-between
     width: 100vw
+    height: 8rem
   
     &__a
         text-decoration: none
