add style to landing, first step

--- a/staff/groups/esputy-corp/esputyfu/components/footer/index.sass
+++ b/staff/groups/esputy-corp/esputyfu/components/footer/index.sass
@@ -1,6 +1,6 @@
 .footer
     width: 100vw
-    background-color: #404046
+    background-color: black
     bottom: 0px
     color: white
     text-align: center
