--- a/staff/groups/esputy-corp/esputyfu/components/register/index.sass
+++ b/staff/groups/esputy-corp/esputyfu/components/register/index.sass
@@ -23,6 +23,7 @@ h1
         background-color: white
         margin-top: 1rem
         width: 75%
+        padding: 8px
     &__advice
      display: none
     &__button
