--- a/staff/groups/esputy-corp/esputyfu/styles/base-settings.sass
+++ b/staff/groups/esputy-corp/esputyfu/styles/base-settings.sass
@@ -4,6 +4,32 @@
 body
     margin: 0
     padding: 0
+    background-image: linear-gradient(black, #2a5234, black)
+.container
+    color: black
+    border: 5px solid #6f6f6f
+    padding: 20px
+    background-color: rgba(255, 255, 255, 0.6)
+    text-align: center
+    display: block
+    font-family: 'Playfair Display', serif
+    &__campName
+        display: none
+    &__input
+        border-radius: 10px
+        border: 2px solid #6F6F6F
+        background-color: white
+        margin-top: 1rem
+        width: 75%
+        padding: 8px
+    &__advice
+     display: none
+    &__button
+        border: 2px solid #6F6F6F
+        background-color: white
+        border-radius: 10px
+        width: 50%
+        margin-top: 50px
 
 
     
