--- a/staff/groups/alf-&-co/app/components/collections/index.sass
+++ b/staff/groups/alf-&-co/app/components/collections/index.sass
@@ -3,4 +3,32 @@ ul
 
 li 
     list-style: none
-    
+
+.container_image
+    width:95%
+    display: flex
+    align-items: center
+    margin: 10px auto
+    position: relative
+    text-align: center
+    img
+        width: 100%
+        position: relative
+        margin: 0 auto
+    p
+        @extend %text-base-medium
+        color: $color-beige
+        letter-spacing: 0.2em
+        position: absolute
+        align-items: center
+        width: 100%
+        bottom: 70px
+    .title_collection
+        @extend %text-base-big
+        font-size: 1.6em
+        color: $color-beige
+        font-weight: 800
+        position: absolute
+        align-items: center
+        width: 100%
+        bottom: 30px
