--- a/staff/groups/alf-&-co/app/style/base-setting.sass
+++ b/staff/groups/alf-&-co/app/style/base-setting.sass
@@ -6,3 +6,5 @@ $color-light-grey: #c6c6c6
 $font-fam: 'Open Sans', Arial, Helvetica, sans-serif
 $color-black: #000000
 $color-beige: #f7f7f7
+
+$font: 'Open Sans', Arial, Helvetica, sans-serif
