--- a/staff/groups/abesti-enterprise/bertsolab/style/index.sass
+++ b/staff/groups/abesti-enterprise/bertsolab/style/index.sass
@@ -1,29 +1,46 @@
 @import url('https://fonts.googleapis.com/css?family=Red+Hat+Display&display=swap')
+@import ../utils/round-border
   
 *
   padding: 0
   margin: 0
   font-family: 'Red Hat Display', sans-serif
-  background-color: f4f4f4
-    
+  box-sizing: border-box
+
+.header
+  background-image: linear-gradient(to bottom right, black, purple)
+  background-repeat: no-repeat
+
 body
   width: 100vw
-  background-color: f4f4f4
+  background-color: rgb(10, 10, 10)
 
 
 .form
   display: flex
   flex-direction: column
-  background-color: red
+  background-color: plum
+  +round-border(0.1rem, 0.1rem, solid, purple)
+  
+  &__title
+    padding: 1rem
+    font-size: 0.8
+  
+  &__field
+    font-size: 1.5rem
+  
+  &__button
+    margin: 1rem
 
 .header__logo--image
-  width: 40%
+  width: 60%
 
 .footer
+  background-image: linear-gradient(to bottom, rgb(10, 10, 10), purple)
+  background-repeat: no-repeat
   position: fixed
   width: 100%
   height: 5%
-  background-color: rgb(103, 0, 163)
   text-align: center
   color: white
   bottom: 0
@@ -52,21 +69,22 @@ body
 .user-menu__auth-option-link
   display: block
   padding: 20px 20px
-  border-right: 1px solid #f4f4f4
+  border-right: 1px solid purple
   text-decoration: none
-  color: #000
+  color: #f4f4f4
 
 
 .user-menu__auth-option-link:hover,
 .header .hamburguer-menu__button:hover 
-  background-color: #f4f4f4
+  background-color: rgba(96, 96, 96, 0.4)
+  color: #f4f4f4
 
+.header__logo
+  padding: 20px
 
 .header .header__logo 
   display: block
   float: left
-  font-size: 2em
-  padding: 10px 20px
   text-decoration: none
 
 
@@ -90,7 +108,7 @@ body
 
 
 .header .hamburguer-menu__icon .hamburguer-menu__navicon 
-  background: #333
+  background: #f4f4f4
   display: block
   height: 2px
   position: relative
@@ -100,7 +118,7 @@ body
 
 .header .hamburguer-menu__icon .hamburguer-menu__navicon:before,
 .header .hamburguer-menu__icon .hamburguer-menu__navicon:after 
-  background: #333
+  background: #f4f4f4
   content: ''
   display: block
   height: 100%
@@ -148,7 +166,7 @@ body
 
 @media (min-width: 48em)
   .header__logo--image
-    width: 70%
+    width: 100%
 
   .user-menu__auth-option 
     float: left
