--- a/staff/groups/le-sky-martini-inc/memefy/components/register-or-login.sass
+++ b/staff/groups/le-sky-martini-inc/memefy/components/register-or-login.sass
@@ -1,9 +1,18 @@
 .register-or-login
     @extend %main-content-box 
+    font-family: "Cousine", sans-serif
+    border-radius: 0.5em 
+
+    &__list
+        padding-top: 3em
+        padding-bottom: 5em
 
     &__item
         list-style: none
         margin-top: 2em
+    
+    &__title
+        color: white
 
     &__register, &__login
         background-color: black
@@ -18,6 +27,7 @@
 
     &__back
         @extend %link
+       
 
     &__back:hover
         color: $hover-text-color
