--- a/staff/groups/le-sky-martini-inc/memefy/components/random.sass
+++ b/staff/groups/le-sky-martini-inc/memefy/components/random.sass
@@ -1,20 +1,51 @@
 .random
-    &__tv-icon
-        max-width: 20%
+    background-color: $primary-bg-color
+    margin-top: 1em
+    padding: 1em
+    &__title1
+        color: white
+        text-align: center
 
-    &__tv-remote
-        max-width: 20%
+    &__title2
+        color: white
+        text-align: left
+        padding-bottom: 1em
+        font-family: Bungee
+        font-size: 10px
 
-    &__title
+    &__tv-icon, &__tv-remote
+        max-width: 15%
+        margin: .5em auto 1em auto
+        padding: .5em
+        border: 2px solid white
+
+    &__detail
+        background-color: $primary-bg-color
+        margin-top: 1em
+        padding: 1em
+        display: flex
+        flex-direction: column
+
+    &__detail-title
+        color: white
+
+    &__group
+        background-color: black
+        color: white
+        margin: 1em auto auto auto
+        padding: 2em
+
+    &__gif-title
         font-size: 33px
+        margin-bottom: .75em
 
     &__photo
-        max-width: 80%
-        margin: auto
+        width: 100%
 
     &__back
         @extend %link
-        margin: 1em auto 2em auto
+        color: white
+        font-size: 13px
 
     &__back:hover
         color: $hover-text-color
