--- a/staff/groups/le-sky-martini-inc/memefy/style/index.sass
+++ b/staff/groups/le-sky-martini-inc/memefy/style/index.sass
@@ -11,6 +11,7 @@
 @import ../components/register-or-login
 @import ../components/random
 @import ../components/feedback
+@import ../components/categories
 @import ../components/search
 @import ../components/results
 @import ../components/gif-detail
