--- a/staff/groups/le-sky-martini-inc/memefy/components/gif-detail.sass
+++ b/staff/groups/le-sky-martini-inc/memefy/components/gif-detail.sass
@@ -1,25 +1,49 @@
 .detail
-    margin: 2em auto auto auto
-    padding: 5em
+    background-color: black
+    color: white
+    margin: 1em auto auto auto
+    padding: 2em
 
     &__title
         font-size: 33px
+        margin-bottom: .75em
 
     &__photo
-        max-width: 80%
-        margin: auto
+        width: 100%
+    
+    &__group1
+        display: flex
+        justify-content: space-between
+        margin-top: 1em
+
+    &__date
+        font-size: 13px
+        padding: 5px
+        color: grey
 
     &__link
-        color: black
+        color: white
         font-weight: bold
-        text-decoration: none 
+        font-size: 13px
+        padding: 5px
+        text-decoration: none     
+    
+    &__link:hover
+        color: $hover-text-color
 
     &__link:hover
-        color: gray
+        color: $hover-text-color
+
+    &__group2
+        display: flex
+        flex-direction: column
+        margin-top: 1em
 
     &__back
         @extend %link
+        color: grey
         margin: 1em auto 2em auto
+        font-size: 13px
 
     &__back:hover
         color: $hover-text-color
