--- a/staff/groups/le-sky-martini-inc/memefy/components/results.sass
+++ b/staff/groups/le-sky-martini-inc/memefy/components/results.sass
@@ -1,35 +1,33 @@
 .results
-    margin: 2em auto auto auto
+    color: white
+    margin: 1em auto auto auto
 
-    &__list
+    &__list    
+        background-color: $primary-bg-color    
         display: grid
-        grid-template-columns: 1
-        align-items: center
-        justify-items: center
+        grid-template-columns: 1fr 1fr
+        grid-column-gap: 10px
+        grid-row-gap: 50px
         list-style: none
-        padding: 0
+        padding: 2em
         font-size: 16px
 
     &__item
-        margin: 2em
-        padding: 10px
         display: flex
         flex-direction: column
         align-items: center
     
     &__image
-        max-width: 300px
-        border-radius: 2em
+        width: 100%
 
     &__favorites
-        background-color: grey
+        background-color: $primary-bg-color
         color: white
         border: none
-        border-radius: 10px
+        border-radius: 5em
         padding: 10px
         font-size: 16px
         margin-top: 1em
-        max-width: 70%
 
     &__favorites:hover
         background-color: $hover-text-color
