--- a/staff/groups/esputy-corp/esputyfu/styles/index.sass
+++ b/staff/groups/esputy-corp/esputyfu/styles/index.sass
@@ -8,3 +8,4 @@
 @import ../components/register-success/index
 @import ../components/search/index
 @import ../components/track-item/index
+@import ../components/track-detail/index
