add list-modal functionality

--- a/staff/groups/alf-&-co/app/style/index.sass
+++ b/staff/groups/alf-&-co/app/style/index.sass
@@ -6,6 +6,7 @@
 @import ../components/movie-item
 @import ../components/login
 @import ../components/register
+@import ../components/list-modal
 
 
 
