--- a/staff/groups/alf-&-co/app/style/index.css
+++ b/staff/groups/alf-&-co/app/style/index.css
@@ -546,6 +546,99 @@ form textareatextarea:focus {
   cursor: not-allowed;
 }
 
+.modal-outer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(10, 10, 10, 0.6);
+  z-index: 10;
+  position: absolute;
+  left: 0;
+  top: 0;
+  overflow: hidden;
+  position: fixed;
+}
+.modal-outer > main {
+  background-color: white;
+  text-align: center;
+}
+
+.modal-inner {
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  width: 80vw;
+  height: 80vh;
+  background-color: #f7f7f7;
+}
+.modal-inner__title {
+  margin-top: 1rem;
+  margin-bottom: 1.5rem;
+}
+.modal-inner__list {
+  display: flex;
+  flex-flow: column nowrap;
+  width: 70%;
+  justify-content: center;
+  align-items: center;
+  border-top: 1px solid rgba(0, 0, 0, 0.5);
+}
+.modal-inner__item {
+  text-align: center;
+  width: 100%;
+  list-style: none;
+  line-height: 2.5rem;
+  color: rgba(0, 0, 0, 0.5);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+}
+.modal-inner__item:nth-last-child {
+  border-bottom: none;
+}
+.modal-inner__btn {
+  width: 100%;
+}
+.modal-inner__btn--active {
+  color: #00ffa6;
+}
+
+.button {
+  width: 40vw;
+  padding: 10px;
+  margin: 10px;
+  text-align: center;
+  color: #000000;
+  background-color: #f7f7f7;
+  border: 0.05rem solid #000000;
+  appearance: none;
+  cursor: pointer;
+  transition: all 250ms cubic-bezier(0.675, 0.42, 0.09, 0.87);
+}
+.button:not([disabled]):hover, .button:not([disabled]):focus {
+  color: #00ffa6;
+  background-color: #f7f7f7;
+}
+.button:focus {
+  outline: none;
+  box-shadow: none;
+}
+.button[disabled] {
+  cursor: not-allowed;
+}
+
+.form-panel {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding: 20px;
+  margin: 2px auto;
+}
+
 .feedback--error, .feedback--success, .mosaicInfo__title, .mosaicInfo__date, .button {
   font-size: 0.8rem;
   text-decoration: none;
@@ -553,14 +646,14 @@ form textareatextarea:focus {
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
 }
 
-.menuToggle a, .registered-name, .container_image p, form, form input, .search-bar, .mosaicInfo__vote, .big-letter {
+.menuToggle a, .registered-name, .container_image p, form, form input, .search-bar, .mosaicInfo__vote, .big-letter, .button {
   font-size: 1rem;
   text-decoration: none;
   font-weight: 200;
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
 }
 
-.container_image .title_collection {
+.container_image .title_collection, .modal-inner__title {
   font-size: 1.3rem;
   text-decoration: none;
   font-weight: 500;
