--- a/staff/groups/over-cook-sa/overcooked/style/index.css
+++ b/staff/groups/over-cook-sa/overcooked/style/index.css
@@ -1,4 +1,5 @@
 * {
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
@@ -15,6 +16,7 @@
 }
 
 body {
+  width: 100vw;
   display: flex;
 }
 
@@ -35,8 +37,7 @@ main {
 
 .landing-logo {
   display: flex;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
 }
 
 .back-img {
@@ -45,7 +46,6 @@ main {
   background-size: cover;
   display: block;
   width: 100%;
-  height: 100%;
 }
 
 .landingContainer {
@@ -61,6 +61,10 @@ main {
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
   padding: 1vw;
+}
+
+.landingContainer {
+  margin: 0 0 0 5px;
 }
 
 .landingContainer li {
@@ -89,13 +93,23 @@ main {
 .random-content {
   border: 2px solid rgba(0, 0, 0, 0.3);
   padding: 0 20px 20px 20px;
-  margin: 60px;
+  margin: 60px auto;
   box-shadow: 0 4px 6px #bbb;
   background: #fff;
   border-radius: 3px;
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
   padding: 10px;
+  width: 80vw;
+  height: 70vw;
+}
+
+.random-content h2 {
+  font-size: 15px;
+}
+
+.random-content h3 {
+  font-size: 12px;
 }
 
 .random-recipe {
@@ -104,8 +118,12 @@ main {
   flex-direction: column;
   align-content: center;
 }
-.random-recipe .recipe-video {
-  border-radius: 30px;
+
+.recipe-video {
+  border-radius: 10px;
+  width: 100%;
+  height: 70%;
+  margin: 20px auto;
 }
 
 footer {
@@ -114,8 +132,20 @@ footer {
   justify-content: space-evenly;
   align-items: baseline;
   color: white;
+  width: 100vw;
 }
 
+.feedback {
+  border: 2px solid rgba(0, 0, 0, 0.3);
+  padding: 0 20px 20px 20px;
+  margin: 60px;
+  box-shadow: 0 4px 6px #bbb;
+  background: #fff;
+  border-radius: 3px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  padding: 10px;
+}
 .feedback--error {
   color: red;
 }
