--- a/staff/groups/over-cook-sa/overcooked/components/feedback/index.sass
+++ b/staff/groups/over-cook-sa/overcooked/components/feedback/index.sass
@@ -1,7 +1,14 @@
 .feedback
-    border: 1px solid black
-    border-radius: 15px
-    background-color: grey
+    border: 2px solid rgba(0,0,0,0.3)
+    padding: 0 20px 20px 20px
+    margin: 60px
+    box-shadow: 0 4px 6px #bbb
+    background: #fff
+    border-radius: 3px
+    -moz-border-radius: 3px
+    -webkit-border-radius: 3px
+    padding: 10px
+    
     &--error
         color: red
     &--warn
