--- a/staff/groups/alf-&-co/app/style/index.sass
+++ b/staff/groups/alf-&-co/app/style/index.sass
@@ -112,6 +112,8 @@ main
     @extend %text-base-medium
     margin: 0px auto
     vertical-align: middle
+    position: fixed
+    z-index: 10
     input,
     textarea
         padding: 6px
@@ -141,7 +143,7 @@ main
         left: 10px
         content: ' '
         height: 20px
-        width: 1px
+        width: 2px
         background-color: $color-black
         opacity: 1
     &:before 
@@ -225,7 +227,7 @@ main
   width: 200px
   margin: 0px 0 0 -50px
   padding-left: 0
-  top: 45px
+  top: 93px
 
   padding-top: 0px
   
@@ -423,7 +425,7 @@ form
         top: 30px
         position: absolute
     &__fav
-        color: $color-beige
+        color: $color-beige        
         font-size: 1.5rem
         font-weight: 500
         right: 25px
@@ -438,9 +440,159 @@ form
         top: 17px
         right: 55px
         position: absolute
+    &__list,
+    &__fav
+        background-color: transparent
+        border: none
+        cursor: pointer
+        appearance: none
+
+        &:not([disabled]):hover,
+        &:not([disabled]):focus 
+            outline: none
+            box-shadow: none
+        &:focus 
+            outline: none
+            box-shadow: none
+        &[disabled] 
+            cursor: not-allowed 
         
 .fas
     color: $color-green-clair
+    border: none
+    cursor: pointer
+    appearance: none
+    &:not([disabled]):hover,
+    &:not([disabled]):focus 
+        outline: none
+        box-shadow: none
+    &:focus 
+        outline: none
+        box-shadow: none
+    &[disabled] 
+        cursor: not-allowed 
+
+.containerDetail
+    width: 100%
+    display: flex
+    align-items: center
+    height: 100%
+    margin: 10px auto
+    margin-top: 40px
+    flex-direction: row
+    background-color: $color-grey-back
+
+.panelDetail
+    display: flex
+    flex-direction: row
+    width: 100%
+    z-index: 2
+    text-align: left
+    left: 10px
+    top: 0
+    z-index: 3
+    flex-wrap: wrap
+    &__director,
+    &__mainCast,
+    &__description,
+    &__date,
+    &__title,
+    &__vote,
+    &__director--name,
+    &__mainCast--name,
+    &__description--description
+        @extend %text-base-small
+        width: 90%
+        color: $color-beige
+        opacity: 0.9
+        font-weight: 800
+        margin-left: 25px
+        margin-top: 10px
+        padding-bottom: 10px
+        margin-right: 25px
+        top: 10px
+        border-bottom: 0.1rem solid $color-beige
+    &__vote
+        color: $color-green-clair
+    &__title
+        margin-top: 30px
+    &__director,
+    &__mainCast
+        border: none
+        &--name
+            font-size: 0.7rem
+            font-weight: 200
+            margin-top: 0
+            border: none
+            list-style: none
+    &__mainCast
+        border-top: 0.1rem solid $color-beige
+        padding-top: 10px
+        margin-top: 5px
+
+    &__description
+        border-top: 0.1rem solid $color-beige
+        padding-top: 10px
+        &--description
+            font-weight: 200
+            font-size: 0.65rem
+            line-height: 1.2rem
+            margin-bottom: 30px
+    
+.panelImage
+    display: flex
+    width: 100%
+    margin: 10px auto
+    padding-right: 10px
+    top: 10px
+    right: 5px
+    &__image
+        top: 10px
+        width: 100%
+        opacity: 0.7
+
+.close
+    &__detail
+    
+        position: absolute
+        right: 10px
+        top: 140px
+        width: 30px
+        height: 30px
+        opacity: 1
+        color: $color-beige
+        z-index: 7
+
+        &:hover 
+            opacity: 0.2
+            color: $color-light-grey
+        &:before,
+        &:after 
+            position: absolute
+            left: 10px
+            content: ' '
+            height: 20px
+            width: 2px
+            background-color: $color-beige
+            opacity: 1
+        &:before 
+            transform: rotate(45deg)
+        &:after 
+            transform: rotate(-45deg)        
+
+
+
+            
+
+
+
+
+        
+
+
+
+
+
 
 
 .panel--foot
