fix style errors

--- a/staff/groups/le-sky-martini-inc/memefy/components/landing.sass
+++ b/staff/groups/le-sky-martini-inc/memefy/components/landing.sass
@@ -15,6 +15,10 @@
         magin: 2em
         padding: 0
 
+    &__header-message
+        color: white
+        margin: 1.5em auto -1.5em auto
+
     &__header-item
         background: linear-gradient(-45deg, #FF5128, #9422E8, #1EC0FF)
         background-size: 400% 400%
@@ -32,7 +36,7 @@
         padding: 10px   
         font-size: 16px
 
-    &__header-register, &__header-login
+    &__header-link
         color: $secondary-text-color
         text-decoration: none        
 
