--- a/staff/groups/le-sky-martini-inc/memefy/components/register-or-login.sass
+++ b/staff/groups/le-sky-martini-inc/memefy/components/register-or-login.sass
@@ -1,5 +1,6 @@
 .register-or-login
     @extend %main-content-box 
+    width: 90%
     font-family: "Cousine", sans-serif
     border-radius: 0.5em 
 
