--- a/staff/groups/le-sky-martini-inc/memefy/components/register-success.sass
+++ b/staff/groups/le-sky-martini-inc/memefy/components/register-success.sass
@@ -2,6 +2,7 @@
     @extend %main-content-box 
     font-family: "Cousine", sans-serif
     border-radius: 0.5em 
+    width: 90%
 
     &__copy
         color: white
@@ -9,10 +10,10 @@
     &__login
         @extend %link
         background-color: white
-        padding: 0.5em
+        padding: 10px
         border-radius: 0.2em 
         z-index: 1em
-
     
     &__login:hover
-        color: $hover-text-color
+        color: white
+        background-color: deeppink
