--- a/staff/groups/le-sky-martini-inc/memefy/components/register.sass
+++ b/staff/groups/le-sky-martini-inc/memefy/components/register.sass
@@ -3,6 +3,7 @@
     background-color: white
     font-family: "Cousine", sans-serif
     border-radius: 0.5em 
+    width: 90%
 
     &__form
         padding: 1px
@@ -23,15 +24,13 @@
     &__button
         margin-top: 1em
         margin-bottom: 1em
-        padding-left: 0.5em
-        padding-right: 0.5em
-        border-radius: 0.2em
-        @extend %button
+        border: none
+        padding: 10px
         background: linear-gradient(-45deg,#FF5128, #9422E8, #1EC0FF)
         background-size: 400% 400%
         animation: Gradient 15s ease infinite
-        padding: 10px
-        font-size: 22px
+        font-size: 18px
+        color: white
         @keyframes Gradient
             0%
                 background-position: 0% 50%
